# difference-calculator

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: my-check.yml
gendiff/: __init__.py  gendiff.py  generate.py  parser.py
gendiff/format/: __init__.py  get_str.py  json.py  json_form.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: correct_json.txt  examples.txt  file1.yaml
